tests/sumo/errors/too_many_teleports/output.sumo
Loading net-file from 'net.net.xml' ... done (1ms).
Loading route-files incrementally from 'input_routes.rou.xml'
Loading done.
Simulation version v1_26_0+1336-682400df945 started with time: 0.00.
Simulation ended at time: 1908.00.
Reason: Too many teleports.
Performance:
 Duration: 0.11s
 Real time factor: 18171.4
 UPS: 1542400.000000
Vehicles:
 Inserted: 181
 Running: 177
 Waiting: 0
 Teleports: 6 (Jam: 5, Yield: 1)
